--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,16 @@
 *.tar.gz
 *.rar
 
+# Private files
+*.xml
+*.properties
+
+# Garbage
+*.meta
+*.iml
+
+# Gradle
+*gradle*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
